Kubernetes/Application/FrontEnd/Development/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-user-nodeport
  namespace: application
  labels:
    app: frontend-user-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend-user
---
