Kubernetes/Application/FrontEnd/Development/03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: application
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: application.development.588231123606.us-east-1.k8s-hotmart.com
    http:
      paths:
      - backend:
          serviceName: frontend-user-nodeport
          servicePort: 80
---
